updated vault repo in pom.xml